force-app/main/default/objects/Case/fields/Last_External_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_External_Message_Id__c</fullName>
    <externalId>true</externalId>
    <label>Last External Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>