force-app/main/default/objects/Case/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Social Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Facebook</fullName><default>false</default><label>Facebook</label></value>
            <value><fullName>Instagram</fullName><default>false</default><label>Instagram</label></value>
            <value><fullName>WhatsApp</fullName><default>false</default><label>WhatsApp</label></value>
            <value><fullName>Twitter</fullName><default>false</default><label>Twitter / X</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>