force-app/main/default/objects/Case/fields/Platform_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Platform_User_Id__c</fullName>
    <label>Platform User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>